[project]
name = "fastapi-nest"
version = "0.1.1"  # 将这里的版本号替换为你的实际版本号
description = "class base view for fastapi"
authors = [{ name = "eatmoreapple", email = "eatmoreorange@gmail.com" }]
readme = "README.md"  # 确保你的项目中有一个 README.md 文件
dependencies = [
    "fastapi",
]


[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"


[project.urls]
homepage = "https://github.com/eatmoreapple/fastapi-nest"
documentation = "https://github.com/eatmoreapple/fastapi-nest#readme"
repository = "https://github.com/eatmoreapple/fastapi-nest"
issues = "https://github.com/eatmoreapple/fastapi-nest/issues"